Added start and end offset for DnaView
Offset is represented as number of segments instead of absolute height values in order to make map sync easier

--- a/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
+++ b/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
@@ -1306,6 +1306,6 @@
         <image name="background" width="1920" height="960"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pVz-i4-l4K"/>
+        <segue reference="j3K-m0-PmQ"/>
     </inferredMetricsTieBreakers>
 </document>
